--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 star_classifier_app/blackhole_classifier_model.h5
 star_classifier_app/blackhole_classifier_model.h5
+star_classifier_app/blackhole_classifier_model.h5
